Changed app name and icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
   -->
 
 <resources>
-  <string name="app_name">Orchextra</string>
+  <string name="app_name">Orchextra Allegri</string>
   <string name="title_activity_login">Sign in</string>
 
   <!-- Strings related to login -->
