Updated Orchextra Sdk
Updated Orchextra Sdk Version 2.0.2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
 
   <string name="orchextra_ko_message">Orchextra not started dur to: </string>
 
+  <string name="orchextra_init_message">Orchextra initialization finished: </string>
+
   <string name="orchextra_received_custom_scheme">Custom scheme: </string>
 
   <string name="orchextra_lauch_scan_button_text">Launch Scan</string>
